syntax = "proto3";

package rivet.backend.pkg.team.avatar_upload_complete;

import "resources/legacy/proto/common.proto";

message Request {
	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid upload_id = 2;
}

message Response {

}
